# DSU-Data-Competition-Spring2025

./: .gitignore  README.md  baseline_models.ipynb  delayed_claims.ipynb  delayed_claims.py  eda.ipynb  error.txt  hello.py  inference.ipynb  inference.py  model.py  notebook.ipynb  pyproject.toml  train_pipeline.pkl  xgboost_study.db
data/: test_set.parquet
utils/: convert-orig-parquet.py
