[project]
name = "dsu-data-competition-spring2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.4.0",
    "darts>=0.32.0",
    "fastexcel>=0.12.1",
    "graphviz>=0.20.3",
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "optuna>=4.2.0",
    "polars>=1.20.0",
    "tqdm>=4.67.1",
    "vegafusion[embed]>=2.0.1",
    "vl-convert-python>=1.7.0",
]
